# annuaire-benin

./: .gitignore  CLAUDE.md  LICENSE  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  donnees.md  journal.md
docs/atlas/: atlas.js  communes.geojson  index.html
src/annuaire_benin/: __init__.py  ingest.py
src/annuaire_benin/atlas/: __init__.py  aggregate.py  benin_adm2.geojson  build.py  geo.py  lexicon.py  population.py  population_2013.csv  template.html
src/annuaire_benin/classify/: __init__.py  mapping.csv  mapping.py  run.py  taxonomy.py
src/annuaire_benin/contacts/: __init__.py  emails.py  phone.py
src/annuaire_benin/dedupe/: __init__.py  arbitrate.py  blocking.py  clustering.py  evaluate.py  exact.py  names.py  run.py  scoring.py
tests/: test_arbitrate.py  test_atlas.py  test_blocking.py  test_classify.py  test_clustering.py  test_emails.py  test_evaluate.py  test_exact.py  test_lexicon.py  test_names.py  test_phone.py  test_scoring.py
tests/e2e/: test_smoke.py
worker/: wrangler.toml
worker/src/: index.js
